first section done

--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="app-container">
+        <section id="screen1" class="screen active-screen">
+            <div class="content-screen1">
+                <h1>Moodboard</h1>
+                <h2>manager</h2>
+                <button class="button" data-target="screen2">start</button>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
