--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
                 <div class="moodboard-options">
                     
                     <div class="options-tile" data-target="screen3">
-                        <div class="tile-image tile-image-1">
-                            </div>
+                        <div class="tile-image tile-image-1"></div>
                         <p>messy</p>
                     </div>
 
                     <div class="options-tile" data-target="screen4">
-                        <div class="tile-image tile-image-2">
-                            </div>
+                        <div class="tile-image tile-image-2"></div>
                         <p>style tiles</p>
                     </div>
 
@@ -43,9 +41,15 @@
             </div>
 
             <div class="bottom-nav">
-                <div class="nav-dot active"></div>
-                <div class="nav-dot"></div>
-                <div class="nav-dot"></div>
+                <div class="nav-icon">
+                    <img class="icon icon-1" src="icons/arrow-left.png" alt="facebook logo"/>
+                </div>
+                <div class="nav-icon">
+                    <img class="icon icon-2" src="icons/home.png" alt="facebook logo"/>
+                </div>
+                <div class="nav-icon">
+                    <img class="icon icon-2" src="icons/export.png" alt="facebook logo"/>
+                </div>
             </div>
         </section>
     </div>
