nav panel funcions

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="app.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
@@ -42,15 +44,15 @@
 
             <div class="bottom-nav">
                 <div class="nav-icon">
-                    <img class="icon icon-1" src="icons/arrow-left.png" alt="facebook logo"/>
+                    <img class="icon icon-1 back-button" src="icons/arrow-left.png" alt="back"/>
                 </div>
                 <div class="nav-icon">
-                    <img class="icon icon-2" src="icons/home.png" alt="facebook logo"/>
+                    <img class="icon icon-2 home-button" src="icons/home.png" alt="home"/>
                 </div>
                 <div class="nav-icon">
-                    <img class="icon icon-2" src="icons/export.png" alt="facebook logo"/>
+                    <img class="icon icon-3 export-button" src="icons/export.png" alt="export"/>
                 </div>
-            </div>
+            </div>   
         </section>
         <section id="screen3" class="screen hidden-screen">
             <button class="close-button" data-target="screen2">×</button>
@@ -78,18 +80,18 @@
             </div>
             <div class="bottom-nav">
                 <div class="nav-icon">
-                    <img class="icon icon-1" src="icons/arrow-left.png" alt="facebook logo"/>
+                    <img class="icon icon-1 back-button" src="icons/arrow-left.png" alt="back"/>
                 </div>
                 <div class="nav-icon">
-                    <img class="icon icon-2" src="icons/home.png" alt="facebook logo"/>
+                    <img class="icon icon-2 home-button" src="icons/home.png" alt="home"/>
                 </div>
                 <div class="nav-icon">
-                    <img class="icon icon-2" src="icons/export.png" alt="facebook logo"/>
+                    <img class="icon icon-3 export-button" src="icons/export.png" alt="export"/>
                 </div>
-            </div>
+            </div>   
         </section>
         <section id="screen4" class="screen hidden-screen">
-            <button class="close-button" data-target="screen3">×</button>
+            <button class="close-button" data-target="screen2">×</button>
 
             <div class="frame-content">
                 <div class="main-hero-image"></div>
@@ -134,14 +136,15 @@
 
             <div class="bottom-nav">
                 <div class="nav-icon">
-                    <img class="icon icon-1" src="icons/arrow-left.png" alt="facebook logo"/>
+                    <img class="icon icon-1 back-button" src="icons/arrow-left.png" alt="back"/>
                 </div>
                 <div class="nav-icon">
-                    <img class="icon icon-2" src="icons/home.png" alt="facebook logo"/>
+                    <img class="icon icon-2 home-button" src="icons/home.png" alt="home"/>
                 </div>
                 <div class="nav-icon">
-                    <img class="icon icon-2" src="icons/export.png" alt="facebook logo"/>
+                    <img class="icon icon-3 export-button" src="icons/export.png" alt="export"/>
                 </div>
+            </div>     
         </section>
     </div>
 </body>
