--- a/index.html
+++ b/index.html
@@ -116,19 +116,19 @@
 
             <div class="palette-container">
                 <div class="color-box" data-index="0" style="--color: #CCDAD1; background-color: #CCDAD1;" onclick="this.classList.toggle('active')">
-                    <span class="hex-code">#CCDAD1</span>
+                    <span class="hex-code">#color1</span>
                     <input type="color" class="color-picker" value="#CCDAD1" title="Vybrat barvu posuvníkem">
                     <input type="text" class="hex-input" value="CCDAD1" placeholder="HEX kód">
                 </div>
 
                 <div class="color-box" data-index="1" style="--color: #9CAEA9; background-color: #9CAEA9;" onclick="this.classList.toggle('active')">
-                    <span class="hex-code">#9CAEA9</span>
+                    <span class="hex-code">#color2</span>
                     <input type="color" class="color-picker" value="#9CAEA9" title="Vybrat barvu posuvníkem">
                     <input type="text" class="hex-input" value="9CAEA9" placeholder="HEX kód">
                 </div>
 
                 <div class="color-box" data-index="2" style="--color: #788585; background-color: #788585;" onclick="this.classList.toggle('active')">
-                    <span class="hex-code">#788585</span>
+                    <span class="hex-code">#color3</span>
                     <input type="color" class="color-picker" value="#788585" title="Vybrat barvu posuvníkem">
                     <input type="text" class="hex-input" value="788585" placeholder="HEX kód">
                 </div>
