--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
             <button class="close-button" data-target="screen2">×</button>
 
             <div class="frame-content">
-                <div class="main-hero-image"></div>
+                <div class="main-hero-image" id="heroImageContainer">
+                    <span class="placeholder-text">Klikněte pro výběr obrázku</span>
+                </div>
                 <div class="font-dropdown-section">
                     <select class="lorem-select-v2">
                         <option>LOREM IPSUM</option>
@@ -116,19 +118,19 @@
 
             <div class="palette-container">
                 <div class="color-box" data-index="0" style="--color: #CCDAD1; background-color: #CCDAD1;" onclick="this.classList.toggle('active')">
-                    <span class="hex-code">#color1</span>
+                    <span class="hex-code">pick color</span>
                     <input type="color" class="color-picker" value="#CCDAD1" title="Vybrat barvu posuvníkem">
                     <input type="text" class="hex-input" value="CCDAD1" placeholder="HEX kód">
                 </div>
 
                 <div class="color-box" data-index="1" style="--color: #9CAEA9; background-color: #9CAEA9;" onclick="this.classList.toggle('active')">
-                    <span class="hex-code">#color2</span>
+                    <span class="hex-code">pick color</span>
                     <input type="color" class="color-picker" value="#9CAEA9" title="Vybrat barvu posuvníkem">
                     <input type="text" class="hex-input" value="9CAEA9" placeholder="HEX kód">
                 </div>
 
                 <div class="color-box" data-index="2" style="--color: #788585; background-color: #788585;" onclick="this.classList.toggle('active')">
-                    <span class="hex-code">#color3</span>
+                    <span class="hex-code">pick color</span>
                     <input type="color" class="color-picker" value="#788585" title="Vybrat barvu posuvníkem">
                     <input type="text" class="hex-input" value="788585" placeholder="HEX kód">
                 </div>
